--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
           y: position.coords.latitude,
         };
         window.coordinates = coordinates;
-        console.log('coordinates', window.coordinates);
       };
       const errorHandler = ({ code }) => {
-        console.log('error!!!!', code);
         window.coordinatesError = code;
       };
       const getCurrentPosition = () => {
@@ -39,6 +37,6 @@
       getCurrentPosition();
       const id = navigator.geolocation.watchPosition(successHandler, errorHandler, options);
     </script>
-<!--    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>-->
+    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
   </body>
 </html>
