various bug fixes

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
       getCurrentPosition();
       const id = navigator.geolocation.watchPosition(successHandler, errorHandler, options);
     </script>
-    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
+<!--    <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>-->
   </body>
 </html>
